--- a/app_usb_aud_xk_evk_xu316_dsp/CMakeLists.txt
+++ b/app_usb_aud_xk_evk_xu316_dsp/CMakeLists.txt
@@ -11,7 +11,7 @@ list(APPEND CMD_MAP_GEN_ARGS --out-dir ${AUTOGEN_DIR})
 set(CMD_MAP_GEN_SCRIPT ${CMAKE_CURRENT_LIST_DIR}/src/python/parse_config.py)
 
 # Get output C file names
-set(OUTPUT_C_FILES ${AUTOGEN_DIR}/cmd_map_offset.c)
+set(OUTPUT_C_FILES ${AUTOGEN_DIR}/generator/gen_cmd_map_offset.c)
 
 add_custom_command(
     OUTPUT ${OUTPUT_C_FILES}
@@ -48,31 +48,23 @@ set(APP_COMPILER_FLAGS_test ${SW_USB_AUDIO_FLAGS} -DOFFSET_GEN=1 -DEXCLUDE_USB_A
 
 include(${CMAKE_CURRENT_LIST_DIR}/configs_test.cmake)
 
-set(APP_INCLUDES src src/core src/extensions)
+set(APP_INCLUDES src src/core src/extensions ${AUTOGEN_DIR}/common ${AUTOGEN_DIR}/device ${AUTOGEN_DIR}/generator)
 set(XMOS_SANDBOX_DIR ${CMAKE_CURRENT_LIST_DIR}/../..)
 
 XMOS_REGISTER_APP()
 
 foreach(BUILD_TARGET ${APP_BUILD_TARGETS})
     add_dependencies(${BUILD_TARGET} cmd_map_generation)
-    target_include_directories(${BUILD_TARGET} PRIVATE ${AUTOGEN_DIR})
 endforeach()
 
 target_sources(${PROJECT_NAME}_test PRIVATE ${OUTPUT_C_FILES})
+#target_include_directories(${PROJECT_NAME}_test PRIVATE ${AUTOGEN_DIR}/generator)
 
 set(_EXECUTABLE_TARGET_NAME ${PROJECT_NAME}_test)
 add_custom_target(run_${_EXECUTABLE_TARGET_NAME}
-COMMAND xsim --args $<TARGET_FILE:${PROJECT_NAME}_test> ${AUTOGEN_DIR}/cmd_offset_size.h
+COMMAND xsim --args $<TARGET_FILE:${PROJECT_NAME}_test> ${AUTOGEN_DIR}/host/cmd_num_values.h
 DEPENDS ${_EXECUTABLE_TARGET_NAME}
 COMMENT
   "Run application"
 VERBATIM
 )
-
-#set(OFFSET_GEN_APP test_args)
-#add_executable(${OFFSET_GEN_APP})
-#add_dependencies(${OFFSET_GEN_APP} cmd_map_generation)
-#target_sources(${OFFSET_GEN_APP} PRIVATE ${OUTPUT_C_FILES})
-#target_include_directories(${OFFSET_GEN_APP} PRIVATE src src/core ${AUTOGEN_DIR} ${CMAKE_CURRENT_LIST_DIR}/../../lib_dsp/lib_dsp/api)
-#target_compile_options(${OFFSET_GEN_APP} PRIVATE -DOFFSET_GEN=1 -DEXCLUDE_USB_AUDIO_MAIN -g -O0 -target=${APP_HW_TARGET} -fcmdline-buffer-bytes=512)
-#target_link_options(${OFFSET_GEN_APP} PRIVATE -target=${APP_HW_TARGET})
