Add support for returning write command status through a followup read request for the write command by the host. Increased max command payload len to 256 bytes

--- a/app_usb_aud_xk_evk_xu316_dsp/host_cmd_map/CMakeLists.txt
+++ b/app_usb_aud_xk_evk_xu316_dsp/host_cmd_map/CMakeLists.txt
@@ -36,8 +36,8 @@ enable_language(CXX C)
 #*********************************************************
 set(XU316_DSP_APP_PATH ${CMAKE_CURRENT_LIST_DIR}/../)
 set( AUTOGEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/src.autogen )
-#file( GLOB MODULE_CONFIG_YAML_FILES  ${XU316_DSP_APP_PATH}/src/yaml/*.yaml )
-file( GLOB MODULE_CONFIG_YAML_FILES  ${XU316_DSP_APP_PATH}/build/dsp_pipeline/yaml/*.yaml )
+file( GLOB MODULE_CONFIG_YAML_FILES  ${XU316_DSP_APP_PATH}/src/yaml/*.yaml )
+#file( GLOB MODULE_CONFIG_YAML_FILES  ${XU316_DSP_APP_PATH}/build/dsp_pipeline/yaml/*.yaml )
 file(GLOB TEMPLATE_FILES ${XU316_DSP_APP_PATH}/src/templates/*.mako)
 unset(CMD_MAP_GEN_ARGS)
 list(APPEND CMD_MAP_GEN_ARGS --out-dir ${AUTOGEN_DIR})
