--- a/app_usb_aud_xk_evk_xu316_dsp/CMakeLists.txt
+++ b/app_usb_aud_xk_evk_xu316_dsp/CMakeLists.txt
@@ -3,30 +3,6 @@ include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(app_usb_aud_xk_evk_xu316_dsp)
 
 
-set( AUTOGEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/src.autogen )
-set(LIB_AUDIO_DSP_PATH ${CMAKE_CURRENT_LIST_DIR}/../../lib_audio_dsp/lib_audio_dsp)
-set(CONFIG_YAML_PATH ${LIB_AUDIO_DSP_PATH}/src/stages/config)
-file( GLOB MODULE_CONFIG_YAML_FILES  ${CONFIG_YAML_PATH}/*.yaml )
-#file( GLOB MODULE_CONFIG_YAML_FILES  ${CMAKE_CURRENT_LIST_DIR}/build/dsp_design/yaml/*.yaml )
-file(GLOB TEMPLATE_FILES ${LIB_AUDIO_DSP_PATH}/src/stages/autogen/templates/*.mako)
-unset(CMD_MAP_GEN_ARGS)
-list(APPEND CMD_MAP_GEN_ARGS --config-dir ${CONFIG_YAML_PATH} --out-dir ${AUTOGEN_DIR})
-set(CMD_MAP_GEN_SCRIPT ${LIB_AUDIO_DSP_PATH}/src/stages/autogen/parse_config.py)
-
-# Get output C file names
-set(OUTPUT_C_FILES ${AUTOGEN_DIR}/generator/gen_cmd_map_offset.c)
-
-add_custom_command(
-    OUTPUT ${OUTPUT_C_FILES}
-    COMMAND python ${CMD_MAP_GEN_SCRIPT} ${CMD_MAP_GEN_ARGS}
-    DEPENDS ${MODULE_CONFIG_YAML_FILES} ${CMD_MAP_GEN_SCRIPT} ${TEMPLATE_FILES}
-    COMMENT "Generating cmd_map files included in the device and host application"
-    VERBATIM
-)
-
-add_custom_target(cmd_map_generation
-    DEPENDS ${OUTPUT_C_FILES})
-
 set(APP_HW_TARGET XK-EVK-XU316)
 include(${CMAKE_CURRENT_LIST_DIR}/../deps.cmake)
 set(APP_PCA_ENABLE OFF)
@@ -62,15 +38,9 @@ set(APP_INCLUDES
     src
     src/core
     src/extensions
-    ${AUTOGEN_DIR}/common
-    ${AUTOGEN_DIR}/device
     ${LIB_AUDIO_DSP_PATH}/api/stages
     ${CMAKE_CURRENT_SOURCE_DIR}/build/dsp_pipeline)
 set(XMOS_SANDBOX_DIR ${CMAKE_CURRENT_LIST_DIR}/../..)
 
 XMOS_REGISTER_APP()
-
-foreach(BUILD_TARGET ${APP_BUILD_TARGETS})
-    add_dependencies(${BUILD_TARGET} cmd_map_generation)
-endforeach()
-
+audio_dsp_add_dependencies()
